WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271710
REGRESSION (
273999@main
): Elements fail to render in Spinnaker
https://bugs.webkit.org/show_bug.cgi?id=271710
Summary
REGRESSION (273999@main): Elements fail to render in Spinnaker
Simon Fraser (smfr)
Reported
2024-03-26 09:26:37 PDT
Spinnaker creates dashboards with some complex nesting of overflow scrolling, with a position:fixed <textarea> thrown in for good measure. Sometimes, elements on these pages go missing.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-03-26 09:26:48 PDT
<
rdar://124483601
>
Simon Fraser (smfr)
Comment 2
2024-03-26 09:36:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26466
EWS
Comment 3
2024-03-26 21:15:19 PDT
Committed
276720@main
(6fa1d3b94cd7): <
https://commits.webkit.org/276720@main
> Reviewed commits have been landed. Closing PR #26466 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug